--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
-asgiref==3.2.7
-Django==3.0.5
-django-appconf==1.0.4
-Pillow==7.1.1
+asgiref==3.2.3
+beautifulsoup4==4.8.2
+bs4==0.0.1
+certifi==2019.11.28
+chardet==3.0.4
+dj-database-url==0.5.0
+Django==2.2.12
+gunicorn==20.0.4
+idna==2.8
+jsonfield==3.1.0
+lxml==4.5.0
+numpy==1.18.1
+pandas==1.0.1
+pdfkit==0.6.1
+psycopg2-binary==2.8.4
+python-dateutil==2.8.1
+python-docx==0.8.10
 pytz==2019.3
-sqlparse==0.3.1
+requests==2.22.0
+selenium==3.141.0
+six==1.14.0
+soupsieve==1.9.5
+sqlparse==0.3.0
+tqdm==4.42.1
+urllib3==1.25.8
+whitenoise==5.0.1
