--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,8 @@
-asgiref==3.2.3
-certifi==2019.11.28
-chardet==3.0.4
-dj-database-url==0.5.0
-Django==2.2.12
-gunicorn==20.0.4
-idna==2.8
-jsonfield==3.1.0
-lxml==4.5.0
-psycopg2-binary==2.8.4
-python-dateutil==2.8.1
+asgiref==3.2.7
+Django==3.0.5
+django-appconf==1.0.4
+django-cors-headers==3.2.1
+Pillow==7.1.1
 pytz==2019.3
 six==1.14.0
-sqlparse==0.3.0
-tqdm==4.42.1
-urllib3==1.25.8
-whitenoise==5.0.1
+sqlparse==0.3.1
